--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/ajax-exercise.css">
+  <link rel="icon" href="data:,">
 
 </head>
 <body>
